# agentic-connect

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CYB-234-VERIFICATION.md  CYB-999448-completion-note.md  CYB-999448-reliability-audit.md  CYB-999596-credential-verification.py  CYB-999596-heartbeat-summary.md  CYB-999596-mcp-tool-audit.md  CYB-999597-SUMMARY.md  CYB-999620-write-tool-test.py  LESSONS.md  LICENSE  MANIFEST.in  PYPI_TRUSTED_PUBLISHER_ESCALATION.md  README.md  SECURITY.md  SKILL_AUDIT.md  _ce_workflow_probe.py  _ce_write_probe.py  _ce_write_probe2.py  cyb999585_report.md  cybernative_agent_credentials.example.json  cybernative_connect.py  cybernative_mcp_bridge.py  cybernative_mcp_server.py  cybernative_tools.py  llms.txt  migrate_creds_to_secrets.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-mcp.txt  requirements.txt  server.json
.github/workflows/: ci.yml  pr-checks.yml  publish-mcp.yml  test.yml
.well-known/: mcp.json
docs/: GITHUB_RELEASE.md  MCP_REGISTRY_PUBLISH.md  SHARING_SKILLS.md  TESTING.md  connectivity-probe.md  cyb-208-conversion-handoff.md  cyb-208-theme-nav-spec.md  cyb-254-conversion-spec.md  cyb-274-asset-manifest.md  cyb-999210-incident-report.md  cyb-999210-status.md  cyb-999211-theme-builder-nav-spec.md  cyb-999349-review-note.md  paid-onboarding-checklist.md  release-publish.md  seo-deploy-handoff.md
docs/demo/: quickstart-transcript.md
docs/onboarding/: getting-started-topic.md
examples/: read_latest_topics.py
launch/: checkout-config.js  checkout-success.html  concierge-onepager.html  concierge.html  consultation.html  design-tokens.css  index.html  landing.css  launch.js  llms.txt  robots.txt  seo.js  sitemap.xml  sponsor.html  styles.css  thanks.html
launch/.well-known/: mcp.json
mcp-server/: LICENSE  README.md  package-lock.json  package.json
playwright-mcp-poc/: .gitignore  REPORT.md  task1-public-nav.mjs  task2-auth-persistence.mjs  task3-debugging.mjs
scripts/: _ce_cyb164_probe.py  _ce_cyb164_probe_results.json  _ce_cyb165_like_probe_results.json  _ce_cyb98_chat_probe.py  _ce_cyb98_chat_probe_results.json  _ce_cyb98_final_probe.py  _ce_cyb98_final_probe_results.json  _ce_cyb98_probe.py  _ce_cyb98_probe_results.json  _ce_skill_validate.py  _validate_mcp_manifest.py  capture-cyb-999211-nav-cta.mjs  capture-cyb274-evidence.mjs  capture-launch-screenshots.mjs  capture-onboarding-ux-audit.mjs  ce_operator_session.py  cyb102_comment.md  cyb156_comment.md  cyb164_findings.md  cyb168_category_probe.md  cyb999447-screenshot.cjs  deploy-cyb-999210-connect-guide.mjs  deploy-cyb-999451-launch-pages.mjs  deploy-cyb-999545-admin-api.py  deploy-well-known.sh  paperclip_update_issue.py  render-cyb274-assets.mjs  update-getting-started-cyb999212.mjs
secrets-manager/: DESIGN.md  README.md  ROTATION-RUNBOOK.md  cli.mjs  get-secret.mjs  migrate.mjs  redact.mjs  vault.mjs
skills/: claude_skill.md  cursor_rules.md  mcp_tool.json  openai_function_schema.json
tests/: run_example_read_latest_smoke.py  run_negative_path_checks.py  run_probe_public_smoke.py  test_build_server.py  test_connect.py  test_cybernative_connect.py  test_cybernative_mcp_bridge.py  test_cybernative_tools.py  test_engagement.py  test_mcp_handler_error_recovery.py  test_mcp_handler_read_integration.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_server_bridge_integration.py  test_post_mutations.py  test_rate_limiting.py  test_skill_validate.py  test_tools.py
workflow-26974711631-logs/: 0_publish.txt
(+38 files in other folders)
