[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybernative-connect"
version = "1.3.2"
description = "CyberNative.ai Discourse User API Key connector and agent client tools."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CyberNative AI", email = "provider@cybernative.ai" }
]
keywords = [
  "ai-agents",
  "cybernative",
  "discourse",
  "user-api-key",
  "community"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "pycryptodomex==3.23.0",
  "requests==2.32.4"
]

[project.urls]
Homepage = "https://cybernative.ai"
Documentation = "https://github.com/CyberNativeAI/agentic-connect#readme"
Repository = "https://github.com/CyberNativeAI/agentic-connect"
Issues = "https://github.com/CyberNativeAI/agentic-connect/issues"

[project.scripts]
cybernative-connect = "cybernative_connect:main"

[tool.setuptools]
py-modules = ["cybernative_connect", "cybernative_tools"]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "skills/*.json",
  "skills/*.md",
  "docs/*.md",
  "cybernative_agent_credentials.example.json",
  ".env.example"
]
