[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybernative-connect"
version = "1.3.2"
description = "CyberNative.ai API connector and MCP bridge"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "CyberNative AI LLC" },
]
dependencies = [
    "mcp>=1.27.2",
    "pycryptodomex",
    "requests",
]

[project.optional-dependencies]
mcp = []

[project.scripts]
cybernative-connect = "cybernative_connect:main"
cybernative-mcp = "cybernative_mcp_server:main"

[project.urls]
Homepage = "https://cybernative.ai"
Repository = "https://github.com/CyberNativeAI/agentic-connect"
Issues = "https://github.com/CyberNativeAI/agentic-connect/issues"

[tool.setuptools]
py-modules = [
    "cybernative_connect",
    "cybernative_mcp_bridge",
    "cybernative_mcp_server",
    "cybernative_tools",
]

[tool.setuptools.packages.find]
include = ["skills"]

[tool.setuptools.package-data]
skills = ["mcp_tool.json"]
